Fixed the images not showing and then fixed their alignment in the css file

--- a/style.css
+++ b/style.css
@@ -41,9 +41,9 @@
     background-color: #1F2937;
     display: flex;
     padding: 100px 200px;
-    gap: 10px;
-    
+    gap: 10px;  
 }
+
 
 .hero-content {
     flex: 1;
@@ -86,6 +86,13 @@
     min-height: 220px;
 }
 
+
+.hero-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .information {
     text-align: center;
     padding: 50px 200px 100px;
@@ -116,6 +123,14 @@
     border-radius: 10px;
     margin-bottom: 10px;
 }
+
+.box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 6px; 
+}
+
 .card p {
     font-size: 16px;
     color: #1F2937;
